# mneme

./: .travis.yml  CMakeLists.txt
include/mneme/: allocators.hpp  displacements.hpp  displs.hpp  iterator.hpp  plan.hpp  span.hpp  storage.hpp  tagged_tuple.hpp  util.hpp  view.hpp
test/: allocators.cpp  displacements.cpp  displs.cpp  mneme.cpp  test_main.cpp
